# rust-simd-noise

./: Cargo.toml
src/: lib.rs  noise_dimensions.rs  noise_helpers_32.rs  shared.rs
src/intrinsics/: mod.rs
src/noise/: fbm_32.rs  fbm_64.rs  simplex_32.rs  simplex_64.rs
src/settings/: cellular2_settings.rs  cellular_settings.rs  fbm_settings.rs  gradient_settings.rs  mod.rs  ridge_settings.rs  turbulence_settings.rs
