[package]
exclude = ["*.jpg"]
name = "simdnoise"
version = "3.1.7"
authors = ["Jack Mott <jack.mott@gmail.com>"]
description = "SIMD accelerate noise library with runtime feature detection"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/simdnoise/"
readme = "README.md"
keywords = ["SIMD", "noise", "simplex", "perlin", "performance"]
repository = "https://github.com/verpeteren/rust-simd-noise"
categories = ["game-engines", "multimedia::images"]
edition = "2018"

[dependencies]
simdeez = { git = "https://github.com/valadaptive/simdeez", rev = "132cb8e" }

[dev-dependencies]
criterion = "0.4.0"
byteorder = "1.4.3"

[[bench]]
name = "benchmarks"
harness = false
